# MVP

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
collectors/: base_collector.py  binance_futures_collector.py  binance_spot_collector.py  bybit_futures_collector.py  bybit_spot_collector.py  collector_runner.py
config/: config.yaml
docs/: architecture.md  configuration.md  phase-0-infrastructure.md  phase-1-symbol-discovery.md  phase-2-normalizer.md  phase-3-shm.md  phase-4-collectors.md
infra/: logging_config.py
normalizer/: normalizer.py  schema.py
shm/: shm_cleaner.py  shm_init.py  shm_layout.py  shm_reader.py  shm_writer.py
symbol_discovery/: base_exchange_info.py  binance_exchange_info.py  bybit_exchange_info.py  discovery_runner.py  intersection.py  symbol_normalizer.py
