[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crypto-spread-monitor"
version = "0.1.0"
description = "Real-time cryptocurrency spread monitor across Binance and Bybit (spot + futures)"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "posix_ipc>=1.1.1",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "symbol_discovery*",
    "collectors*",
    "normalizer*",
    "shm*",
    "spread_reader*",
    "infra*",
]
